refactor: UnmodifiableList 불변성을 보장하는 부분 수정