@@ -1,5 +1,7 @@
 package racingcar.model;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 public class Cars {
@@ -11,6 +13,7 @@ public class Cars {
     }
 
     public List<Car> getCars() {
-        return Collections.unmodifiableList(cars);
+        List<Car> unmodifiableList = List.copyOf(cars);
+        return unmodifiableList;
     }
 }
